k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iwtc-backend
  namespace: iwtc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app: iwtc-backend
  ports:
    - name: http
      port: 80
      targetPort: http
