k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iwtc-backend
  namespace: iwtc
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  ingressClassName: traefik
  rules:
    - host: api.iwtc.ddongmy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iwtc-backend
                port:
                  number: 80
    - host: media.iwtc.ddongmy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - api.iwtc.ddongmy.com
        - media.iwtc.ddongmy.com
      secretName: iwtc-backend-tls
